FIX: remove overflow prop (#91)

--- a/scss/composer.scss
+++ b/scss/composer.scss
@@ -16,7 +16,6 @@
 
     border-top-right-radius: var(--d-border-radius);
     border-top-left-radius: var(--d-border-radius);
-    overflow: hidden;
 
     .grippie {
       background: var(--tertiary-low);
